[package]
name = "std-eng1"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
futures = "0.3.17"
tokio = { version = "1.11.0", features = ["full"] }

[target.x86_64-unknown-linux-musl]
linker = "rust-lld"